--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
+    "hookrouter": "^1.2.3",
     "node-sass": "^4.14.1",
     "qs": "^6.9.4",
     "react": "^16.13.1",
