--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "qs": "^6.9.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-flexible-sliding-menu": "^0.1.9",
+    "react-hamburger-menu": "^1.2.1",
     "react-hot-loader": "^4.12.21",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3",
