--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-flexible-sliding-menu": "^0.1.9",
     "react-hamburger-menu": "^1.2.1",
     "react-hot-loader": "^4.12.21",
+    "react-icons": "^3.11.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3",
     "react-select": "^3.1.0",
