--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
+    "hamburger-react": "^2.1.1",
     "history": "^5.0.0",
     "hookrouter": "^1.2.3",
     "jwt-decode": "^2.2.0",
     "node-sass": "^4.14.1",
     "qs": "^6.9.4",
     "react": "^16.13.1",
+    "react-device-detect": "^1.13.1",
     "react-dom": "^16.13.1",
     "react-flexible-sliding-menu": "^0.1.9",
     "react-hamburger-menu": "^1.2.1",
