--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
+    "bootstrap": "^4.5.2",
     "hamburger-react": "^2.1.1",
     "history": "^5.0.0",
     "hookrouter": "^1.2.3",
@@ -14,6 +15,7 @@
     "node-sass": "^4.14.1",
     "qs": "^6.9.4",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.3.0",
     "react-device-detect": "^1.13.1",
     "react-dom": "^16.13.1",
     "react-flexible-sliding-menu": "^0.1.9",
