--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "qs": "^6.9.4",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
+    "react-datepicker": "^3.1.3",
     "react-device-detect": "^1.13.1",
     "react-dom": "^16.13.1",
     "react-flexible-sliding-menu": "^0.1.9",
