--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3",
     "react-select": "^3.1.0",
-    "react-spinners": "^0.9.0"
+    "react-spinners": "^0.9.0",
+    "react-switch": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
