--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "awesome-debounce-promise": "^2.1.0",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.2",
     "hamburger-react": "^2.1.1",
@@ -17,6 +18,7 @@
     "node-sass": "^4.14.1",
     "qs": "^6.9.4",
     "react": "^16.13.1",
+    "react-async-hook": "^3.6.1",
     "react-bootstrap": "^1.3.0",
     "react-datepicker": "^3.1.3",
     "react-device-detect": "^1.13.1",
@@ -30,7 +32,9 @@
     "react-scripts": "^3.4.3",
     "react-select": "^3.1.0",
     "react-spinners": "^0.9.0",
-    "react-switch": "^5.0.1"
+    "react-switch": "^5.0.1",
+    "throttle-debounce": "^2.3.0",
+    "use-constant": "^1.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
