--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "qs": "^6.9.4",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
+    "react-countdown": "^2.2.1",
     "react-datepicker": "^3.1.3",
     "react-device-detect": "^1.13.1",
     "react-dom": "^16.13.1",
