--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-select": "^3.1.0",
     "react-spinners": "^0.9.0",
     "react-switch": "^5.0.1",
-    "throttle-debounce": "^2.3.0"
+    "throttle-debounce": "^2.3.0",
+    "uuid": "^8.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
