--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "hamburger-react": "^2.1.1",
     "history": "^5.0.0",
     "hookrouter": "^1.2.3",
+    "html-entities": "^1.3.1",
     "jwt-decode": "^2.2.0",
     "node-sass": "^4.14.1",
     "qs": "^6.9.4",
