--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "hookrouter": "^1.2.3",
     "html-entities": "^1.3.1",
     "jwt-decode": "^2.2.0",
+    "moment": "^2.29.1",
     "node-sass": "^4.14.1",
     "qs": "^6.9.4",
     "react": "^16.13.1",
@@ -27,6 +28,7 @@
     "react-hamburger-menu": "^1.2.1",
     "react-hot-loader": "^4.12.21",
     "react-icons": "^3.11.0",
+    "react-moment": "^1.0.0",
     "react-paginate": "^6.3.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3",
